--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,19 +12,23 @@ services:
       - dcard:/var/lib/postgresql/data/
     ports:
       - 5432:5432
-#   pgadmin:
-#     image: dpage/pgadmin4
-#     restart: always
-#     environment:
-#       PGADMIN_DEFAULT_EMAIL: go@test.com
-#       PGADMIN_DEFAULT_PASSWORD: go
-#     ports:
-#       - 5050:80
-#     volumes:
-#       - pgadmin-data:/var/lib/pgadmin
+  redis:
+    image: redis:7.2.4-alpine
+    ports:
+      - 6379:6379
+  # pgamin:
+  #   image: dpage/pgadmin4
+  #   restart: always
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: go@test.com
+  #     PGADMIN_DEFAULT_PASSWORD: go
+  #   ports:
+  #     - 5050:80
+  #   volumes:
+  #     - pgadmin-data:/var/lib/pgadmin
 volumes:
   dcard:
-#   pgadmin-data:
+  # pgadmin-data:
 # find out your port
 # docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' postgres's_id
 
