--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,16 @@
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    restart: always
+    environment:
+      DATABASE_URL: postgres://go:go@postgres/go?sslmode=disable
+      REDIS_ADDRESS: redis:6379
+    networks:
+      - dcard
   postgres:
     image: postgres:15.5-alpine
     restart: always
@@ -8,28 +20,21 @@ services:
       POSTGRES_PASSWORD: go
       PGDATA: /data/postgres
     volumes:
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./db/dump.sql:/docker-entrypoint-initdb.d/init.sql
       - dcard:/var/lib/postgresql/data/
     ports:
       - 5432:5432
+    networks:
+      - dcard
   redis:
     image: redis:7.2.4-alpine
     ports:
       - 6379:6379
-  # pgamin:
-  #   image: dpage/pgadmin4
-  #   restart: always
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: go@test.com
-  #     PGADMIN_DEFAULT_PASSWORD: go
-  #   ports:
-  #     - 5050:80
-  #   volumes:
-  #     - pgadmin-data:/var/lib/pgadmin
+    networks:
+      - dcard
 volumes:
   dcard:
-  # pgadmin-data:
+networks:
+  dcard:
 # find out your port
 # docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' postgres's_id
-
-
